fix | remove style-loader

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,4 +5,4 @@ html
             include style.css
     body
         h1 My Site
-        p Welcome to my super lame site.
+        p Леса - колбаса.
